testsuite/tests/generic_interfaces/parent_implements/test.out
== foo.lkt ==
foo.lkt:14:1: error: BarNode implements Interface, but it already is implemented by its parent class FooNode
14 | class BarNode: FooNode implements Interface {
   | ^


lkt_compile: Done
